# 25LPCVC_track2_segmentation

./: .gitignore  environment.yaml  pyproject.toml  workspace.ipynb
25lpcvc_track2_segmentation_sample_solution.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
SAM_2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
compile_and_profile/: build_baseline_model.py  compile_profile_inference_aihub.py  evaluate.py  inference.py  inference_with_onnx.py  models.py  utils.py
export_sam2_to_onnx/: export_sam2_to_onnx.py  test_onnx_sam2.py
export_sam2_to_onnx/sam2_onnx/: __init__.py  sam2.py  utils.py
modeling/architectures/: seem_model_demo.py  seem_model_v0.py  seem_model_v1.py  xdecoder_model.py
modeling/backbone/: focal.py  focal_dw.py
modeling/body/: transformer_blocks.py
modeling/body/decoder/: modules.py  xdecoder.py
modeling/body/encoder/: transformer_encoder_fpn.py
modeling/interface/: modules.py  seem_demo.py  seem_v0.py  seem_v1.py  xdecoder.py  xdecoder_qnn.py
modeling/language/: loss.py  vlpencoder.py
modeling/language/LangEncoder/: transformer.py
modeling/modules/: criterion.py
modeling/utils/: attention.py  config.py  interactive.py  misc.py
modeling/vision/backbone/: davit.py  focal.py  focal_dw.py  vit.py
modeling/vision/encoder/: transformer_encoder_deform.py  transformer_encoder_fpn.py
modeling/vision/encoder/ops/: test.py
modeling/vision/encoder/ops/functions/: ms_deform_attn_func.py
utils/: distributed.py  model.py
